# HOAReservePlanning

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
data/: components.csv  inputs.yaml
data/contributions/: recommended.csv  smooth_ramp.csv
data/fixtures/boundary_duplicate_contribution_year/: expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_end_year_inclusive/: components.csv  expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_extra_contribution/: components.csv  expected_values.md  expected_values.yaml
data/fixtures/boundary_interval_one/: expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_invalid_flags/: components.csv  expected_values.md  expected_values.yaml
data/fixtures/boundary_max_rows_exceeded/: components.csv  expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_missing_columns_components/: components.csv  expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_missing_columns_contributions/: components.csv  expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_missing_contribution/: expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_missing_interval/: components.csv  expected_values.md  expected_values.yaml  inputs.yaml
data/fixtures/boundary_negative_balance/: components.csv  inputs.yaml  (+2 more)
reserve/: build.py  cli.py  constants.py  excel.py  fixture_check.py  model.py  schedule.py  validate.py
tests/: test_excel.py  test_model.py  test_validate.py
(+54 files in other folders)
